# llm-sandbox

./: LICENSE  README.md  main.py  pyproject.toml
data/: train-validation.safetensors
src/: hyperparameters.py  model.py  sample.py  tokenizer.py  train.py
