[project]
name = "simplechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "marimo[recommended]>=0.20.2",
    "numpy>=2.4.2",
    "pip-system-certs>=5.3",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "typer>=0.24.1",
]
[tool.marimo.runtime]
pythonpath = ["src"]
